# solver

./: .gitignore  CMakeLists.txt  CMakePresets.json  EXECUTION_ROADMAP_V1.md  README.md  TECH-SPEC.md
benchmarks/: lid_driven_cavity_re100_128.cfg  taylor_green_128.cfg  taylor_green_3d_256_smoke.cfg  taylor_green_3d_64.cfg  taylor_green_3d_smoke.cfg  taylor_green_smoke.cfg
core/: CMakeLists.txt  aligned_buffer.hpp  field_layout.hpp  fields.hpp  grid.hpp  runtime.cpp  runtime.hpp
docs/: DETERMINISTIC_RUNBOOK.md  EXECUTION_ROADMAP_V1.md  PROJECT_STATUS.md  RELEASE_CANDIDATE.md
docs/code-reviews/: FIX_PLAN_ISSUE_1_NONCONVERGED_PRESSURE_PROJECTION.md  FIX_PLAN_ISSUE_2_TG_VALIDATION_MISMATCHED_FIELDS.md  VALID_ISSUES_TRACKER.md
docs/code-reviews/archived/: CODE_REVIEW_FINDINGS.md  LOGICAL_MATHEMATICAL_CODE_REVIEW.md  LOGICAL_MATHEMATICAL_CODE_REVIEW_GROK.md  poisson-solver-review.md
io/: CMakeLists.txt  checkpoint.cpp  checkpoint.hpp  vtk_export.cpp  vtk_export.hpp
linsolve/: poisson_solver.cpp  poisson_solver.hpp
metal/: CMakeLists.txt  taylor_green_backend.hpp  taylor_green_backend.metal  taylor_green_backend.mm
operators/: discrete_operators.cpp
profiling/: run_profile_suite.py
profiling/baselines/: m10_m1_max.csv
profiling/latest/: cpu_vs_metal.csv  cpu_vs_metal.md  hotspot_summary.csv  hotspot_summary.md  improvement_vs_m10.csv  improvement_vs_m10.md  kernel_microbenchmarks.csv  kernel_microbenchmarks.md  policy_study.csv  policy_study.md  summary.md  thread_scaling.csv  thread_scaling.md  throughput_summary.csv  throughput_summary.md
solver/: CMakeLists.txt  channel_flow.cpp  lid_driven_cavity.cpp  lid_driven_cavity.hpp  momentum_terms.cpp  momentum_terms.hpp  operator_verification.cpp  projection.cpp  projection.hpp  taylor_green.cpp  taylor_green.hpp
tests/: CMakeLists.txt  test_runtime.cpp  test_validation_suite.py
tools/: CMakeLists.txt  example_main.cpp  lid_driven_cavity_main.cpp  profile_example.sh  profile_suite_background.sh  run_release_candidate_suite.sh  taylor_green_main.cpp
validation/: BENCHMARK_SUITE.md  run_validation_suite.py
validation/latest/: benchmark_summary.csv  benchmark_summary.md  mass_conservation.csv  mass_conservation.md  summary.md  taylor_green_temporal.csv  taylor_green_temporal.md  taylor_green_temporal_cfl_0p25.cfg  taylor_green_temporal_cfl_0p5.cfg  taylor_green_temporal_cfl_1p0.cfg
